--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <div id="app">
       
-      <div >
+      <div class="container">
         <div id="game-status" aria-live="assertive">Player X's turn</div>
         <div id="board" class="board" role="grid" aria-label="Tic-Tac-Toe Board"></div>
       </div>
